# boids-rs

./: Cargo.toml  README.md  test-config.toml
benches/update/: config.toml  main.rs
examples/rerun/: complex-config.toml  main.rs  mesh-config.toml  setup.rs  simulation.rs  test-config.toml
src/: aos.rs  lib.rs  main.rs  model.rs  setup.rs  soa.rs  utils.rs
src/environment/: loader.rs  mesh.rs  mod.rs  sdf.rs
src/lib/: lib.rs  model.rs  setup.rs
src/lib/model/: aos.rs  soa.rs
