[package]
name = "boids-rs"
version = "0.1.0"
authors = ["Lorenzo Dominci"]
edition = "2021"
description = "A simple parallel boids simulation in Rust"
readme = "README.md"
repository = "https://github.com/lorenzo-dominici/boids-rs"
license-file = "LICENSE"
keywords = ["boids", "simulation", "parallel", "rust"]
categories = ["science", "simulation"]
exclude = ["test-config.toml"]
publish = false
default-run = "main"

[lib]
name = "boids"
path = "src/lib/lib.rs"

[dependencies]
glam = "0.29.2"
indicatif = "0.17.11"
rand = "0.8.5"
rayon = "1.10.0"
rerun = "0.21.0"
serde = { version = "1.0.217", features = ["derive"] }
time = "0.3.37"
toml = "0.8.19"

[profile.release]
lto = true