[package]
name = "boids-rs"
version = "0.1.0"
authors = ["Lorenzo Dominci"]
edition = "2021"
description = "A simple parallel boids simulation in Rust"
readme = "README.md"
repository = "https://github.com/lorenzo-dominici/boids-rs"
license-file = "LICENSE"
keywords = ["boids", "simulation", "parallel", "rust"]
categories = ["science", "simulation"]
exclude = ["test-config.toml"]
publish = false

[lib]
name = "boids"

[[bench]]
name = "update"
harness = false

[dependencies]
glam = "0.29.2"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
criterion = "0.5.1"
indicatif = "0.17.11"
rerun = { version = "0.21.0", default-features = false, features = ["log", "sdk", "web_viewer"] }
time = "0.3.37"
toml = "0.8.19"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = "symbols"
